# PyLorentz

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  contributors.txt  pyproject.toml  setup.py
Examples/: 02_SIM_demo.ipynb  02_SIM_template.ipynb  04_visualizations.ipynb  SIM_template.ipynb  TIE_template.ipynb  TIE_template_old.ipynb  _SIPRAD_demo.ipynb  example_mumax.ovf  how_to_get_mdf_data.txt  visualizations_demo.ipynb
Examples/data/: data_readme.txt
GUI/: PyLorentz_GUI.py  PyTIE_GUI.py  align.py  bUnwarpJ_2_images.bsh  defaults.txt  gui_help.py  gui_layout.py  gui_styling.py  util.py
PyLorentz/GUI/: PyLorentz_GUI.py  gui_styling.py  util.py
PyLorentz/data/: base_dataset.py  data_legacy.py  defocused_dataset.py
PyLorentz/dataset/: __init__.py  base_dataset.py  data_legacy.py  defocused_dataset.py  through_focal_series.py
PyLorentz/io/: __init__.py  io.py  ovf.py  read.py  write.py
PyLorentz/phase/: AD_funcs.py  AD_phase.py  AD_utils.py  DIP_NN.py  TIE_params.py  __init__.py  base_phase.py  base_tie.py  sitie.py  tie.py
PyLorentz/sim/: __init__.py  base_phase.py  base_sim.py  comp_phase.py  (+4 more)
PyTIE/: TIE_helper.py  TIE_params.py  TIE_reconstruct.py  TIE_template.ipynb  __init__.py  colorwheel.py  longitudinal_deriv.py  microscopes.py
SimLTEM/: SIM_example.ipynb  comp_phase.py  congrid.py  phaseTEM.py  sim_helper.py
Simulation/: 3D_mag_sim.ipynb  simTEMimages.py  sim_example.ipynb  sim_helper.py
docs/: requirements.txt
envs/: PyLorentz-310_simple.yml  lin-310_full.yml  lin-310_simple.yml  lin-37.yml  osx-310_simple.yml  osx-37.yml  win-37.yml
(+58 files in other folders)
